keys: add tuna specific implementation
On the tuna device some keys are handled differently (e.g. no KEY_HOME but KEY_POWER) so we
have to adjust this in the keys module.

Open-webOS-DCO-1.0-Signed-off-by: Simon Busch <morphis@gravedo.de>

--- a/src/rockhopper/keys/CMakeLists.txt
+++ b/src/rockhopper/keys/CMakeLists.txt
@@ -18,4 +18,6 @@
 
 if(${WEBOS_TARGET_MACHINE_IMPL} STREQUAL emulator)
 	nyx_create_module(KeysMain keys_common.c emulator/keys.c)
+elseif(${WEBOS_TARGET_MACHINE_IMPL} STREQUAL tuna)
+	nyx_create_module(KeysMain keys_common.c tuna/keys.c)
 endif()
